--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,25 +39,25 @@
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Name is required">
 						<span class="label-input100">Name</span>
-						<input class="input100" type="text" name="name" id="name" placeholder="Type your Name">
+						<input class="input100" type="text" name="name" id="name" placeholder="Type your Name" required>
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is required">
 						<span class="label-input100">Username</span>
-						<input class="input100" type="text" name="username" id="username" placeholder="Type your email">
+						<input class="input100" type="email" name="username" id="username" placeholder="Type your email" required>
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" id="pass" placeholder="Type your password">
+						<input class="input100" type="password" name="pass" minlength="8" id="pass" placeholder="Type your password" required>
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass1" id="pass1" placeholder="Retype your password">
+						<input class="input100" type="password" name="pass1" id="pass1" placeholder="Retype your password" required>
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 
