--- a/templates/suggestion.html
+++ b/templates/suggestion.html
@@ -271,7 +271,7 @@
 					<form action="/map_stocks" class="call_form" method="post">
 						<div class="row">
 							<div class="col-md-6">
-								<input type="number" step="any" name="amount" min="5000" id="amount" class="input_item" placeholder="Investment Amount">
+								<input type="number" step="any" name="amount" min="5000" id="amount" class="input_item" placeholder="Investment Amount" required>
 							</div>
 							<div class="col-md-6">
 								<select class="dropdown_item input_item" name="strategy" id="strategy">
